--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "france-inter",
+  "name": "person-detection",
   "version": "1.0.0",
   "repository": "git@rendu-git.etna-alternance.net:module-9360/activity-50760/group-1003664.git",
   "author": "Laurine PEREIRA <pereir_l@etna-alternance.net>",
